[package]
name = "rblx_wild_rain_joiner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.17.2", features = ["native-tls"]}
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.136"
simple-stopwatch="0.1.4"
reqwest = { version = "0.11.10", features = ["blocking"] }
rustc-serialize = "0.3"
futures = { version = "0.3.21", features = ["executor"], default-features = false }
tokio = { version = "1.0.0", features = ["full", "time"] }

colored = "2.0.0"
rand = "0.8.5"
chrono = "0.4.19"
webhook = "2.0.0"
spinner = "0.5.0"
